--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Impuestos 4-72</title>
+    <title>Nequi</title>
   </head>
   <body class="border-r-gray-50 min-h-screen">
         <div id="root"></div>
